# test_task_nekidaem_

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
myproject/blog/: models.py  serializers.py  tasks.py  views.py
myproject/blog/management/commands/: generate_posts.py
myproject/myproject/: celery.py  settings.py  urls.py
