[tool.poetry]
name = "nekidaem-taest-task"
version = "0.1.0"
description = ""
authors = ["timkri < timkri@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.7"
faker = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
